<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="#000"
            android:textStyle="bold"
            tools:text="@string/dummy_name" />

        <TextView
            android:id="@+id/tv_file_size"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="end"
            android:layout_height="wrap_content"
            tools:text="@string/dummy_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_file_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:singleLine="true"
            android:textStyle="italic"
            tools:text="@string/dummy_path" />

    </LinearLayout>

</LinearLayout>